src/main/java/com/example/vacancymanagement/core/errors/UseCaseError.java
package com.example.vacancymanagement.core.errors;

public interface UseCaseError {
    String getMessage();
}